name:                ipld
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Network.IPLD
    Network.IPLD.Example
    Network.IPLD.Test
    Network.IPLD.Hedgehog
    Network.IPLD.Lens
  other-modules:
    Network.IPLD.Internal
    Network.IPLD.Cid
  -- other-extensions:
  build-depends:
    base >=4.9 && <4.10,
    unordered-containers,
    vector,
    text,
    multiaddr,
    attoparsec,
    binary-serialise-cbor,
    bytestring,
    byteable,
    cryptonite,
    text-format,
    base16-bytestring,
    base58-bytestring,
    memory,
    lens,
    mtl,
    hashable,

    -- Test
    tasty,
    tasty-hunit,
    hedgehog == 0.2.*,
    containers,
    turtle
  hs-source-dirs:      src
  default-language:    Haskell2010

-- test-suite unit-tests
--   type             : exitcode-stdio-1.0
--   hs-source-dirs   : tests
--   main-is          : test.hs
--   build-depends    :
--     base,
--     unordered-containers,
--     vector,
--     text,
--     multiaddr,
--     attoparsec,
--     binary-serialise-cbor,
--     ipld,
--     tasty,
--     tasty-hunit
--   default-language : Haskell2010
