name:                ipld
version:             0.1.0.0
synopsis:            InterPlanetary Linked Data
description:
  An implementation of IPLD (InterPlanetary Linked Data) in Haskell.
  .
  See <https://github.com/ipld/ipld IPLD> for the spec this implemements.
license:             BSD3
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
copyright:           Copyright (c) 2017 Joel Burget
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with: GHC == 7.10.3, GHC == 8.0.2

library
  exposed-modules:
    Network.IPLD
    Network.IPLD.Example
    Network.IPLD.Lens
    Network.IPLD.Client
  other-modules:
    Network.IPLD.Internal
    Network.IPLD.Cid
    Network.IPLD.Class
    Network.IPLD.Patterns
  build-depends:
    base >= 4.8 && <4.11,
    unordered-containers,
    vector,
    text,
    attoparsec,
    cborg == 0.1.*,
    bytestring,
    byteable,
    cryptonite,
    text-format,
    base16-bytestring,
    base58-bytestring,
    memory,
    lens,
    mtl,
    hashable,
    aeson,
    scientific,
    turtle,
    foldl
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite unit-tests
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  main-is          : UnitTest.hs
  build-depends    :
    base,
    unordered-containers,
    vector,
    text,
    attoparsec,
    cborg == 0.1.*,
    lens,
    bytestring,
    base16-bytestring,
    ipld,
    tasty,
    tasty-hunit
  default-language : Haskell2010

test-suite property-tests
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  main-is          : HedgehogTest.hs
  build-depends    :
    base,
    unordered-containers,
    vector,
    text,
    attoparsec,
    cborg == 0.1.*,
    ipld,
    bytestring,
    scientific,
    aeson,

    hedgehog == 0.2.*,
    containers,
    turtle,
    aeson,
    foldl
  default-language : Haskell2010

